@@ -1,3 +1,0 @@
-The ncurses Ada95 binding was originally written by Juergen Pfeifer in
-1996.  It has been improved several times by Juergen, as wll as
-Eugen V. Melaragno and Nicolas Boulenguez.
