@@ -1,77 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2021/04/05 08:32:09 nia Exp $
-bin/adacurses-config
-include/adacurses/terminal_interface-curses-aux.adb
-include/adacurses/terminal_interface-curses-aux.ads
-include/adacurses/terminal_interface-curses-forms-field_types-alpha.adb
-include/adacurses/terminal_interface-curses-forms-field_types-alpha.ads
-include/adacurses/terminal_interface-curses-forms-field_types-alphanumeric.adb
-include/adacurses/terminal_interface-curses-forms-field_types-alphanumeric.ads
-include/adacurses/terminal_interface-curses-forms-field_types-enumeration-ada.adb
-include/adacurses/terminal_interface-curses-forms-field_types-enumeration-ada.ads
-include/adacurses/terminal_interface-curses-forms-field_types-enumeration.adb
-include/adacurses/terminal_interface-curses-forms-field_types-enumeration.ads
-include/adacurses/terminal_interface-curses-forms-field_types-intfield.adb
-include/adacurses/terminal_interface-curses-forms-field_types-intfield.ads
-include/adacurses/terminal_interface-curses-forms-field_types-ipv4_address.adb
-include/adacurses/terminal_interface-curses-forms-field_types-ipv4_address.ads
-include/adacurses/terminal_interface-curses-forms-field_types-numeric.adb
-include/adacurses/terminal_interface-curses-forms-field_types-numeric.ads
-include/adacurses/terminal_interface-curses-forms-field_types-regexp.adb
-include/adacurses/terminal_interface-curses-forms-field_types-regexp.ads
-include/adacurses/terminal_interface-curses-forms-field_types-user-choice.adb
-include/adacurses/terminal_interface-curses-forms-field_types-user-choice.ads
-include/adacurses/terminal_interface-curses-forms-field_types-user.adb
-include/adacurses/terminal_interface-curses-forms-field_types-user.ads
-include/adacurses/terminal_interface-curses-forms-field_types.adb
-include/adacurses/terminal_interface-curses-forms-field_types.ads
-include/adacurses/terminal_interface-curses-forms-field_user_data.adb
-include/adacurses/terminal_interface-curses-forms-field_user_data.ads
-include/adacurses/terminal_interface-curses-forms-form_user_data.adb
-include/adacurses/terminal_interface-curses-forms-form_user_data.ads
-include/adacurses/terminal_interface-curses-forms.adb
-include/adacurses/terminal_interface-curses-forms.ads
-include/adacurses/terminal_interface-curses-menus-item_user_data.adb
-include/adacurses/terminal_interface-curses-menus-item_user_data.ads
-include/adacurses/terminal_interface-curses-menus-menu_user_data.adb
-include/adacurses/terminal_interface-curses-menus-menu_user_data.ads
-include/adacurses/terminal_interface-curses-menus.adb
-include/adacurses/terminal_interface-curses-menus.ads
-include/adacurses/terminal_interface-curses-mouse.adb
-include/adacurses/terminal_interface-curses-mouse.ads
-include/adacurses/terminal_interface-curses-panels-user_data.adb
-include/adacurses/terminal_interface-curses-panels-user_data.ads
-include/adacurses/terminal_interface-curses-panels.adb
-include/adacurses/terminal_interface-curses-panels.ads
-include/adacurses/terminal_interface-curses-putwin.adb
-include/adacurses/terminal_interface-curses-putwin.ads
-include/adacurses/terminal_interface-curses-termcap.adb
-include/adacurses/terminal_interface-curses-termcap.ads
-include/adacurses/terminal_interface-curses-terminfo.adb
-include/adacurses/terminal_interface-curses-terminfo.ads
-include/adacurses/terminal_interface-curses-text_io-aux.adb
-include/adacurses/terminal_interface-curses-text_io-aux.ads
-include/adacurses/terminal_interface-curses-text_io-complex_io.adb
-include/adacurses/terminal_interface-curses-text_io-complex_io.ads
-include/adacurses/terminal_interface-curses-text_io-decimal_io.adb
-include/adacurses/terminal_interface-curses-text_io-decimal_io.ads
-include/adacurses/terminal_interface-curses-text_io-enumeration_io.adb
-include/adacurses/terminal_interface-curses-text_io-enumeration_io.ads
-include/adacurses/terminal_interface-curses-text_io-fixed_io.adb
-include/adacurses/terminal_interface-curses-text_io-fixed_io.ads
-include/adacurses/terminal_interface-curses-text_io-float_io.adb
-include/adacurses/terminal_interface-curses-text_io-float_io.ads
-include/adacurses/terminal_interface-curses-text_io-integer_io.adb
-include/adacurses/terminal_interface-curses-text_io-integer_io.ads
-include/adacurses/terminal_interface-curses-text_io-modular_io.adb
-include/adacurses/terminal_interface-curses-text_io-modular_io.ads
-include/adacurses/terminal_interface-curses-text_io.adb
-include/adacurses/terminal_interface-curses-text_io.ads
-include/adacurses/terminal_interface-curses-trace.adb
-include/adacurses/terminal_interface-curses-trace.ads
-include/adacurses/terminal_interface-curses.adb
-include/adacurses/terminal_interface-curses.ads
-include/adacurses/terminal_interface-curses_constants.ads
-include/adacurses/terminal_interface.ads
-lib/adacurses/libAdaCurses.a
-lib/gnat/adacurses.gpr
-man/man1/adacurses-config.1
