@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2021/10/26 10:14:12 nia Exp $
-
-BLAKE2s (AdaCurses-20150808.tgz) = 816ea391103cb838ca37a1a648bdd7d39fc9a76ff1ef0aaec144d9c411a0465c
-SHA512 (AdaCurses-20150808.tgz) = 4a20f090786dd644b1f692ff6098aa8a644e530119b82127a860d9772100b00c81f32de9b3fcf441a8478b6b13c4780e2563ceb6eff94b64158e499528c44015
-Size (AdaCurses-20150808.tgz) = 675359 bytes
